--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "embla-carousel-react": "8.5.1",
     "html5-qrcode": "latest",
     "input-otp": "1.4.1",
-    "jspdf": "latest",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.454.0",
-    "next": "14.2.16",
+    "next": "^14.2.29",
     "next-themes": "latest",
     "prisma": "5.10.2",
     "qrcode": "^1.5.3",
